# URGE

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/urge-core/: Cargo.toml
crates/urge-core/src/: ast.rs  decision.rs  engine.rs  lib.rs  symbol.rs
crates/urge-engines/: Cargo.toml
crates/urge-engines/src/: boolean.rs  deontic.rs  epistemic.rs  fuzzy.rs  lib.rs  modal.rs  paraconsistent.rs  temporal.rs
crates/urge-meta/: Cargo.toml
crates/urge-meta/src/: lib.rs  parser.rs  pipeline.rs  router.rs  tokenizer.rs  validator.rs
crates/urge-monitor/: Cargo.toml
crates/urge-monitor/src/: engine.rs  lib.rs  obligation.rs  temporal.rs
crates/urge-runtime/: Cargo.toml
crates/urge-runtime/examples/: agent_gate.rs  bios_access.rs  comparison_opa.rs  healthcare_consent.rs
crates/urge-runtime/src/: audit.rs  embedded.rs  healthcare.rs  lib.rs
crates/urge-runtime/tests/: integration.rs
crates/urge-wasm/: Cargo.toml
crates/urge-wasm/src/: lib.rs
docs/: ARCHITECTURE.md  PUBLISHING.md  USE_CASES.md
docs/demo/: index.html
docs/demo/pkg/: urge_wasm.js  urge_wasm_bg.wasm
docs/launch/: reddit-r-rust.md  show-hn.md
docs/stale-examples/: README.md  bios_chip.rs  healthcare_erp.rs
examples/comparison_opa/: README.md  input_ok.json  input_review_missing.json  policy.rego
