[package]
name        = "urge-core"
description = "URGE core: no_std Unicode semantic dictionary, AST, engine trait, and decision types"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
keywords.workspace     = true
readme.workspace       = true
categories.workspace   = true

[features]
default  = ["alloc"]
alloc    = []
std      = ["alloc"]
serde    = ["dep:serde", "heapless/serde"]

[dependencies]
serde    = { version = "1", features = ["derive"], optional = true }
smallvec = { version = "1.11", default-features = false, features = ["const_new"] }
heapless = { version = "0.8", default-features = false }
log      = { version = "0.4", default-features = false }

[dev-dependencies]
