[package]
name        = "urge-engines"
description = "URGE logic engine implementations: Boolean, Modal, Deontic, Temporal, Epistemic, Fuzzy, Paraconsistent"
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
keywords.workspace     = true
readme.workspace       = true
categories.workspace   = true

[features]
default = ["alloc"]
alloc   = ["urge-core/alloc"]
std     = ["alloc", "urge-core/std"]
serde   = ["urge-core/serde", "dep:serde"]

[dependencies]
urge-core = { path = "../urge-core", version = "0.1.1" }
serde     = { version = "1", features = ["derive"], optional = true }
heapless  = { version = "0.8", default-features = false }
log       = { version = "0.4", default-features = false }
