[package]
name        = "urge-runtime"
description = "URGE runtime: std-tier public API, audit log, event bus, and integration facades"
version     = "0.1.0"
edition     = "2021"
authors     = ["Anthony R. Slosar <contact@todomodo.io>"]
license     = "Apache-2.0"
repository  = "https://github.com/toneron2/urge"

[features]
default = ["std"]
alloc   = [
    "urge-core/alloc",
    "urge-engines/alloc",
    "urge-meta/alloc",
    "urge-monitor/alloc",
]
std     = [
    "alloc",
    "urge-core/std",
    "urge-engines/std",
    "urge-meta/std",
    "urge-monitor/std",
]
serde   = [
    "urge-core/serde",
    "urge-meta/serde",
    "urge-monitor/serde",
    "dep:serde",
    "dep:serde_json",
]
healthcare = []   # enables HIPAA/clinical policy helpers
embedded   = []   # tightens defaults for embedded targets

[dependencies]
urge-core    = { path = "../urge-core",    version = "0.1.0" }
urge-engines = { path = "../urge-engines", version = "0.1.0" }
urge-meta    = { path = "../urge-meta",    version = "0.1.0" }
urge-monitor = { path = "../urge-monitor", version = "0.1.0" }
serde        = { version = "1", features = ["derive"], optional = true }
serde_json   = { version = "1", optional = true }
heapless     = { version = "0.8", default-features = false }
log          = { version = "0.4" }
